# utils

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: deploy.yml
src/: jwt_decoder.rs  lib.rs  password_gen.rs
tests/: web.rs
www/: index.html  style.css
