[package]
name = "utils"
version = "0.1.0"
authors = ["Evan R"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3"
base64 = "0.22"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Location",
    "Node",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.67"

[profile.release]
opt-level = "s"
